force-app/main/default/objects/SAP_Account_Lock__e/SAP_Account_Lock__e.object-meta.xml
<CustomObject>
    <description>Platform event to lock or unlock accounts when they are lcoked or unlocked in SAP</description>
    <label>SAP Account Lock</label>
    <pluralLabel>SAP Account Locks</pluralLabel>
</CustomObject>