force-app/main/default/objects/SAP_Account_Lock__e/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>Salesforce ID of the account to lock or unlock</description>
    <label>Account ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>