force-app/main/default/objects/SAP_Account_Lock__e/fields/IsLocked__c.field-meta.xml
<CustomField>
    <fullName>IsLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean flag specifying whether the account is locked.</description>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>