force-app/main/default/objects/SAP_Account_Lock__e/fields/SAPId__c.field-meta.xml
<CustomField>
    <fullName>SAPId__c</fullName>
    <description>Customer ID in SAP</description>
    <label>SAP Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>